--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,14 @@
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+<div  class = "center jumbotron" > 
+  <h1> Bem-vindo ao aplicativo de exemplo </ h1>
+
+  <h2>
+    Esta é a página inicial do
+    <a  href= "http://www.railstutorial.org/"> Ruby on Rails Tutorial </a>
+    exemplo de aplicativo.
+  </ h2>
+
+  <% =  link_to  "Inscreva-se agora!" ,  '#' ,  classe :  "btn btn-lg btn-primário"  %> 
+</ div>
+
+<% =  link_to  image_tag ( "rails.png" ,  alt :  "Logotipo do Rails" ), 
+            'http://rubyonrails.org/'%  >
