--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,16 @@
-<div  class = "center jumbotron" > 
-  <h1> Bem-vindo ao aplicativo de exemplo </ h1>
+<div class="center jumbotron">
+  <h1>Welcome to the Sample App</h1>
 
   <h2>
-    Esta é a página inicial do
-    <a  href= "http://www.railstutorial.org/"> Ruby on Rails Tutorial </a>
-    exemplo de aplicativo.
-  </ h2>
+    This is the home page for the
+    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
 
-  <% =  link_to  "Inscreva-se agora!" ,  '#' ,  classe :  "btn btn-lg btn-primário"  %> 
-</ div>
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
 
-<% =  link_to  image_tag ( "rails.png" ,  alt :  "Logotipo do Rails" ), 
-            'http://rubyonrails.org/'%  >
+<%= link_to image_tag("rails.png", alt: "Rails logo"),
+            'http://rubyonrails.org/' %>
+<%= link_to image_tag("kitten.jpg", alt: "Kitten"),
+            'http://rubyonrails.org/' %>
