--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,11 +17,11 @@ body {
   
   .center {
     text-align: center;
-  }
-  
-  .center h1 {
-    margin-bottom: 10px;
-  }
+
+    h1 {
+        margin-bottom: 10px;
+    }
+}
 
   img {
     display: none;
@@ -65,12 +65,14 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: -1px;
     padding-top: 9px;
     font-weight: bold;
+    
+    &:hover {
+        color: white;
+        text-decoration: none;
+    }
+
   }
   
-  #logo:hover {
-    color: #fff;
-    text-decoration: none;
-  }
 
   /* footer */
 
@@ -79,26 +81,26 @@ footer {
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
+  a {
+        color: $gray;
+
+        &:hover {
+            color: $gray-darker;
+        }
+    }
+
+    small {
+        float: left;
+    }
+
+    ul {
+        float: right;
+        list-style: none;
+
+        li {
+            float: left;
+            margin-left: 15px;
+        }
+    }
 }
 
-footer a {
-  color: #555;
-}
-
-footer a:hover {
-  color: #222;
-}
-
-footer small {
-  float: left;
-}
-
-footer ul {
-  float: right;
-  list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 15px;
-}
